# SpaceChessEngine

./: .gitignore  CMakeLists.txt  ThirdPartyNotices.txt
SpaceChessEngine/: CMakeLists.txt  SpaceChessEngine.cpp  SpaceChessEngine.h
algo_linear/: CMakeLists.txt  algoGeneric.cpp  algoGeneric.h  algoInterval.cpp  algoInterval.h  algoLinear.cpp  algoLinear.h  algo_dumbo.cpp  algo_dumbo.h  algo_dumbo_impl.cpp  algo_dumbo_impl.h  feature.cpp  feature.h
chess/: CMakeLists.txt  algo.cpp  algo.h  algoLinear.cpp  algoLinear.h  algo_factory.cpp  algo_factory.h  board.cpp  board.h  board_impl.cpp  board_impl.h  fen.cpp  fen.h  pgn.cpp  pgn.h
chess_test/: CMakeLists.txt  algo_dumbo_test.cpp  chess_test.cpp  test_positions.cpp  test_positions.h
chess_test/games/: from_position.pgn
common/: CMakeLists.txt  base.cpp  base.h
game/: CMakeLists.txt  CliAlgo.cpp  CliAlgo.h  game_cli.cpp
